update navigation menu links

--- a/views/header.html
+++ b/views/header.html
@@ -37,8 +37,8 @@
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="/about">About</a>
-                            <a class="dropdown-item" href="#">Checklist</a>
-                            <a class="dropdown-item" href="#">Done</a>
+                            <a class="dropdown-item" href="/checklist">Checklist</a>
+                            <a class="dropdown-item" href="/done">Done</a>
                         </div>
                     </div>
                 </div>
